<resources>
    <string name="app_name">QReader</string>
    <string name="token_default">Nada leído todavía...</string>
    <string name="menu_open_always">Abrir siempre</string>
    <string name="menu_reset">Limpiar</string>
    <string name="menu_copy">Copiar</string>
    <string name="menu_open">Abrir</string>
    <string name="menu_list">Ver codigos</string>
    <string name="menu_save">Guardar</string>

    <string name="permissionPromptTitle">Permiso necesario</string>
    <string name="permissionPromptMessage">Necesito usar la camara para poder leer los codigos QR</string>
    <string name="permissionPromptSadMessage">Soy inutil sin permiso para acceder a la camara</string>
    <string name="permissionButtonText">Entendido</string>
</resources>

